Fix copyright alignment

--- a/themes/terminal-bio/static/assets/my-style.css
+++ b/themes/terminal-bio/static/assets/my-style.css
@@ -5,3 +5,7 @@
 .copyright span {
     text-align: center;
 }
+
+.copyright--message {
+    flex-basis: 100%;
+}
